--- a/css/main.css
+++ b/css/main.css
@@ -1,12 +1,23 @@
+body {
+	background: #c62168;
+}
+
 
 /* ----------- Tablets larger than 768px wide ----------- */
-@media () {
+@media (min-width: 768px) {
+
 	body {
-    background: red;
+    background: #ffd662;
   }
+
 }
 
 /* ----------- Monitors larger than 1200px wide ----------- */
-@media () {
+
+@media (min-width: 1200px) {
+
+  body{
+    background: #ff6f61;
+  }
 
 }
